manifests/deployment-portfoliowebsite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website-deployment
  namespace: portfolio-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
      - name: portfolio-website
        image: wdoyle123/portfolio-website:1.2.2
        ports:
        - containerPort: 80
