manifests/service-portfoliowebsite.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website-service
  namespace: portfolio-website
spec:
  selector:
    app: portfolio-website
  ports:
    - protocol: TCP
      name: http
      port: 80        
      targetPort: 3000
      nodePort: 30081  
  type: NodePort
