manifests/ingress-portfoliowebsite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-website-ingress
  namespace: portfolio-website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx  
  tls:
  - hosts:
    - williamdoyle.co.uk
    - www.williamdoyle.co.uk
    secretName: portfolio-website-tls
  rules:
  - host: williamdoyle.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-website-service
            port:
              number: 80
  - host: www.williamdoyle.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-website-service
            port:
              number: 80
